tests/baselines/reference/symbolProperty21.errors.txt
symbolProperty21.ts(10,5): error TS2353: Object literal may only specify known properties, and '[Symbol.toPrimitive]' does not exist in type 'I<boolean, string>'.


==== symbolProperty21.ts (1 errors) ====
    interface I<T, U> {
        [Symbol.unscopables]: T;
        [Symbol.isConcatSpreadable]: U;
    }
    
    declare function foo<T, U>(p: I<T, U>): { t: T; u: U };
    
    foo({
        [Symbol.isConcatSpreadable]: "",
        [Symbol.toPrimitive]: 0,
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2353: Object literal may only specify known properties, and '[Symbol.toPrimitive]' does not exist in type 'I<boolean, string>'.
        [Symbol.unscopables]: true
    });